--- a/test_playbook.yml
+++ b/test_playbook.yml
@@ -3,5 +3,5 @@
   gather_facts: no
 
   tasks:
-    - name: Test
-      command: 'echo Hello'
+    - name: Do something with credentials
+      msg: "{{ lookup('hashi_vault', 'secret=kv/data/environments/env1/ansible_secret token=vault_token url=http://10.109.20.235:8200/') }}"
