--- a/test_playbook.yml
+++ b/test_playbook.yml
@@ -4,4 +4,5 @@
 
   tasks:
     - name: Do something with credentials
-      msg: "{{ lookup('hashi_vault', 'secret=kv/data/environments/env1/ansible_secret token=vault_token url=http://10.109.20.235:8200/') }}"
+      debug:
+        msg: "{{ lookup('hashi_vault', 'secret=kv/data/environments/env1/ansible_secret token=vault_token url=http://10.109.20.235:8200/') }}"
